--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Trivia Challenge</title>
+    <title>GifTastic</title>
   	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   	<link rel="stylesheet" type=text/css href="assets/css/bootstrap.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -18,49 +18,23 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-12 text-center" id = "gif-search-input">
-        <p></p>
+    <div class="col-sm-12 text-center">
+      <form>
+        <span id="giphy-new-search">Search for: <input id="gif-search-term" type="text" >  <input id="gif-search-submit" value="Add Search Term" type="submit"></span>
+      </form>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-12 text-center" id = "gif-buttons-here">
-        <p></p>
+        <p>Giphy search terms: </p>
     </div>
   </div>
   <br><br>
-  <div class="row">
+  <div class="row"> 
     <div class="col-sm-12 text-center" id = "gifs-appear-here">
     </div>
   </div>
- <!--  <br>
-  <div class="row">
-    <div class="col-sm-12 text-center" id = "game-answer-buttons">
-    </div>
-  </div>
-  <br>
-  <div class="row">
-  <div class="col-sm-12 text-center" id = "game-countdown">
-      <p><span class = "text-center" id="countdown-text"></span> <span class = "text-center" id="countdown-text-time"></span></p>
-    </div>
-  </div>
-  <br>
-  <div class="row">
-  <div class="col-sm-12 text-center" id = "game-score">
-      
-      <p>Correct Answers: <span class="win">0</span></p>
-      <p>Incorrect Answers: <span class="loss">0</span></p>
-    </div>
-  </div> -->
-<!--   <div class="row">
-    <div class="col-sm-12">
-      <p>Current Score: <span id = "game-current-score"></span></p>
-    </div>
-  </div>
- -->
-<!-- 
-  <div class="row">
-  		<div class="col-sm-12 img-responsive center-block" id = "game-picture"></div><br>
-  </div> -->
 </div>	
 
  <script type="text/javascript" src="assets/javascript/game.js"></script>
